--- a/src/main/resources/templates/admin/member/point.html
+++ b/src/main/resources/templates/admin/member/point.html
@@ -25,7 +25,7 @@
             </div>
 
             <table class="admingraph">
-                <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
+                <tr class="admin_title">
                     <th><input type="checkbox" name="all" /></th>
                     <th>번호</th>
                     <th>아이디</th>
@@ -36,7 +36,7 @@
                     <th>지급 날짜</th>
                 </tr>
 
-                <tr class="admin_point-list" style="height: 50px;">
+                <tr class="admin_list">
                     <td ><input type="checkbox" name="회원코드" /></td>
 
                     <td>5</td>
