--- a/src/main/resources/templates/admin/order/list.html
+++ b/src/main/resources/templates/admin/order/list.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>롯데on 관리자 주문현황</title>
+    <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/admin/list.css">
 </head>
 
@@ -100,7 +101,7 @@
                             </form>
                         </div>
                         <table class="admingraph">
-                            <tr class="admin_title" style="height: 50px;">
+                            <tr class="admin_title">
                                 <th>주문번호</th>
                                 <th>주문자</th>
                                 <th>주문자명</th>
@@ -113,7 +114,7 @@
                                 <th>배송</th>
                             </tr>
 
-                            <tr class="admin_order-list" style="height: 50px;">
+                            <tr class="admin_list">
                                 <td>
                                     <a href="">1012121341</a>
                                 </td>
@@ -124,7 +125,7 @@
                                 <td>102,900</td>
                                 <td>신용카드</td>
                                 <!-- 신용카드, 계좌이체, 휴대폰 등등 -->
-                                <td>결제완료</td>
+                                <td style="color: green;">결제완료</td>
                                 <!-- 결제완료, 결제대기, 주문취소 -->
                                 <td>2024-10-16</td>
                                 <!-- 연월일시간초 -->
