--- a/src/main/resources/templates/admin/member/list.html
+++ b/src/main/resources/templates/admin/member/list.html
@@ -24,7 +24,7 @@
                 </form>
             </div>
             <table class="admingraph">
-                <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
+                <tr class="admin_title">
                     <th><input type="checkbox" name="allCheck" /></th>
                     <th>번호</th>
                     <th>아이디</th>
@@ -39,7 +39,7 @@
                     <th>관리</th>
                 </tr>
 
-                <tr class="admin_member-list" style="height: 50px; ">
+                <tr class="admin_list">
                     <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
                     <td>5</td>
                     <td>xxxxx</td>
