--- a/src/main/resources/templates/admin/shop/list.html
+++ b/src/main/resources/templates/admin/shop/list.html
@@ -30,7 +30,7 @@
                 <tr>● 운영 준비</tr>
             </div>
             <table class="admingraph">
-                <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
+                <tr class="admin_title">
                     <th><input type="checkbox" name="allCheck" /></th>
                     <th>번호</th>
                     <th>상호명</th>
@@ -42,7 +42,7 @@
                     <th>관리</th>
                 </tr>
 
-                <tr class="admin_version-list" style="height: 50px; ">
+                <tr class="admin_list">
                     <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
                     <td>1</td>
                     <td>(주)합천</td>
