--- a/src/main/resources/templates/admin/shop/sales.html
+++ b/src/main/resources/templates/admin/shop/sales.html
@@ -21,7 +21,7 @@
                 </form>
             </div>
             <table class="admingraph">
-                <tr class="admin_title" style="height: 50px; border-bottom: 1px solid #A6A6A6;">
+                <tr class="admin_title">
                     <th>번호</th>
                     <th>상호명</th>
                     <th>사업자등록번호</th>
@@ -34,7 +34,7 @@
                     <th>매출합계</th>
                 </tr>
 
-                <tr class="admin_shop-sales" style="height: 50px; ">
+                <tr class="admin_list">
                     <td>5</td>
                     <td>(주)합천</td>
                     <td>112-12-12345</td>
