--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/static/css/reset.css" th:href="@{/css/reset.css}">
 
     <ul class="footer__links">
-        <li class="footer__link"><a href="#">회사소개</a></li>
+        <li class="footer__link"><a th:href="@{/company/index}">회사소개</a></li>
         <li class="footer__link"><a href="#">서비스이용약관</a></li>
         <li class="footer__link"><a href="#">개인정보처리방침</a></li>
         <li class="footer__link"><a href="#">전자금융거래약관</a></li>
